[gd_scene load_steps=5 format=3 uid="uid://bairsqbp31pdo"]

[ext_resource type="Texture2D" uid="uid://bmiromuprxlea" path="res://Assets/PNG/background.png" id="1_4aqey"]
[ext_resource type="Script" uid="uid://cj6iotigxbd3g" path="res://Scenes/background.gd" id="1_xgxeb"]
[ext_resource type="Texture2D" uid="uid://d4dyvw1nt6f6o" path="res://Assets/PNG/groundRock.png" id="2_xgxeb"]
[ext_resource type="Texture2D" uid="uid://dvysajgjslfps" path="res://Assets/PNG/groundDirt.png" id="3_ltlj5"]

[node name="Background" type="Node2D"]
script = ExtResource("1_xgxeb")

[node name="Sky" type="Parallax2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Sky"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.8352941, 0.92941177, 0.96862745, 1)

[node name="BackgroundClouds" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.1, 0.1)
repeat_size = Vector2(1280, 0)
repeat_times = 3

[node name="Background" type="Sprite2D" parent="BackgroundClouds"]
position = Vector2(640, 336)
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_4aqey")

[node name="GroundRocks" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(808, 0)
repeat_times = 3

[node name="GroundRock" type="Sprite2D" parent="GroundRocks"]
position = Vector2(726, 684)
texture = ExtResource("2_xgxeb")

[node name="GroundDirt" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.7, 1)
repeat_size = Vector2(808, 0)
repeat_times = 3

[node name="GroundDirt" type="Sprite2D" parent="GroundDirt"]
position = Vector2(403, 685)
texture = ExtResource("3_ltlj5")
